--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,8 @@ android {
     }
 }
 
+def retrofit2_retrofit_version = "2.9.0"
+
 dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
@@ -55,4 +57,8 @@ dependencies {
     //Firebase
     implementation platform('com.google.firebase:firebase-bom:28.0.1')
     implementation 'com.google.firebase:firebase-database'
+
+    //Retrofit
+    implementation "com.squareup.retrofit2:retrofit:$retrofit2_retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit2_retrofit_version"
 }
