--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,8 @@ dependencies {
     //Firebase
     implementation platform('com.google.firebase:firebase-bom:28.0.1')
     implementation 'com.google.firebase:firebase-database'
+    implementation 'com.google.firebase:firebase-storage-ktx'
+
 
     //Retrofit
     implementation "com.squareup.retrofit2:retrofit:$retrofit2_retrofit_version"
