--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,9 @@ android {
         viewBinding = true
         dataBinding = true
     }
+    dataBinding {
+        enabled = true
+    }
 }
 
 def retrofit2_retrofit_version = "2.9.0"
@@ -86,4 +89,6 @@ dependencies {
     //Glide
     implementation "com.github.bumptech.glide:glide:$glide_version"
     annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
+
+    kapt "androidx.lifecycle:lifecycle-compiler:2.3.1"
 }
